# signingsavvy

./: .coverage  .gitignore  .wordlists  CHANGELOG.md  LICENSE  __main__.py  create_flashcards_vocab.py  genindex.html  get_articles.py  get_sentences.py  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pysign__anki.py  pysign__assets.py  pysign__common.py  pysign__config.py  pysign__formatting.py  pysign__globals.py  pysign__http.py  pysign__variants.py  pysign__videos.py  pysign__wordlists.py  search.html  searchindex.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1.bug.md  2.feature.md
.github/images/icons/poetry/: .ref
.github/images/icons/python/: .ref
.github/workflows/: ci.yml  github.yml  qa.yml  release.yml
_sources/: modules.rst.txt
docs/: CONTRIBUTING.md  README.md  conf.py  index.rst
get_variants/: get_variants.py
html/: html.py
pysign/: __init__.py  db.py  format.py  start.py
source/: conf.py  index.rst
source/_autosummary/: pysign.anki.rst  pysign.api.rst  pysign.format.rst  pysign.start.rst
src/: conf.py  index.rst
src/pysign/: __init__.py  __main__.py  anki.coco  anki.py  api.coco  api.py  conf.py  db.coco  db.py  interfaces.py  pysign_api.py  remote.coco  remote.py  start.coco  start.py  types.py
src/signingsavvy/: __init__.py  __main__.py  api.py
src/tests/: test_start.py
src/tests/json/sentence/: 4882.json  4882_full_member.json
src/tests/json/sign/: 4943.json  4943_full_member.json
src/tests/json/word/: 4943.json  4943_full_member.json
tests/: test_start.py
videos/: videos.py
