[tool.poetry]
name = "pysign"
version = "0.0.1"
description = "SigningSavvy API wrapper"
authors = ["Brighten Tompkins <brightenqtompkins@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.26.0"
py-bcrypt = "^0.4"
windows-curses = "^2.3.0"
Sphinx = "^4.3.0"
renku-sphinx-theme = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
python-semantic-release = "^7.22.0"

[tool.semantic_release]
version_variable = [
    "pysign/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
changelog_file = "docs/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
