[tool.commitizen]
version = "1.0.2"
tag_format = "v$major.$minor.$patch$prerelease"
annotated_tag = true
version_files = [
  "pyproject.toml:tool.commitizen.version",
  "pyproject.toml:tool.poetry.version",
  "src/signingsavvy/__version__.py:__version__"
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "src"

[tool.black]
line-length = 79
include = ".pyi?$"
exclude = """
/(
    .git
  | .hg
  | .mypy_cache
  | .tox
  | .venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
"""

[tool.poetry]
name = "signingsavvy"
version = "1.0.2"
description = "SigningSavvy API wrapper"
authors = ["Brighten Tompkins <brightenqtompkins@gmail.com>"]
maintainers = ["Brighten Tompkins <brightenqtompkins@gmail.com>"]
license = "MIT"
readme = "docs/README.md"
packages = [
    { include = "signingsavvy", from = "src" }
]
homepage = "https://blackboardd.github.io/signingsavvy/"
repository = "https://github.com/blackboardd/signingsavvy"
documentation = "https://blackboardd.github.io/signingsavvy/"
keywords = [
  "Rest",
  "ASL",
  "Sign Language",
  "API",
  "SigningSavvy",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
bs4 = "^0.0.1"
myst-parser = "^0.15.2"
poetry-core = "^1.0.7"
python = ">=3.7,<4.0"
renku-sphinx-theme = "^0.2.2"
requests = "^2.26.0"
Sphinx = "^4.3.0"
virtualenv = "^20.10.0"
quart = "^0.16.2"
tox = "^3.24.5"
quart-rate-limiter = "^0.6.0"
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
poetry-dynamic-versioning = "^0.13.1"
python-semantic-release = "^7.22.0"
sphinx-autobuild = "^2021.3.14"

[tool.isort]
py_version = 36
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["."]
extend_skip = ["setup.py"]

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "src/signingsavvy/__version__.py:__version__"
version_toml = [
  "pyproject.toml:tool.commitizen.version",
  "pyproject.toml:tool.poetry.version",
]
branch = "main"
version_source = "tag"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
changelog_file = "docs/CHANGELOG.md"
